Tickmarks for overlay scrollbars

Bug: 759152
Change-Id: I9e351b475cd9afa14cdae9264a2b78ab36a18258