cc/layers/painted_overlay_scrollbar_layer.cc
@@ -90,6 +90,10 @@ void PaintedOverlayScrollbarLayer::PushPropertiesTo(LayerImpl* layer) {
     scrollbar_layer->SetAperture(gfx::Rect());
     scrollbar_layer->set_thumb_ui_resource_id(0);
   }
+
+  if (track_resource_.get()) {
+    // ???
+  }
 }
 
 ScrollbarLayerInterface* PaintedOverlayScrollbarLayer::ToScrollbarLayer() {
@@ -154,9 +158,37 @@ bool PaintedOverlayScrollbarLayer::PaintThumbIfNeeded() {
   thumb_resource_ = ScopedUIResource::Create(
       layer_tree_host()->GetUIResourceManager(), UIResourceBitmap(skbitmap));
 
+  PaintTickMarks();
+
   SetNeedsPushProperties();
 
   return true;
+}
+
+void PaintedOverlayScrollbarLayer::PaintTickMarks() {
+  gfx::Rect paint_rect = track_rect_;
+
+  DCHECK(!paint_rect.size().IsEmpty());
+  DCHECK(paint_rect.origin().IsOrigin());
+
+  SkBitmap skbitmap;
+  skbitmap.allocN32Pixels(paint_rect.width(), paint_rect.height());
+  SkiaPaintCanvas canvas(skbitmap);
+
+  SkRect content_skrect = RectToSkRect(paint_rect);
+  PaintFlags flags;
+  flags.setAntiAlias(false);
+  flags.setBlendMode(SkBlendMode::kClear);
+  canvas.drawRect(content_skrect, flags);
+  canvas.clipRect(content_skrect);
+
+  scrollbar_->PaintPart(&canvas, TICKMARKS, paint_rect);
+  // Make sure that the pixels are no longer mutable to unavoid unnecessary
+  // allocation and copying.
+  skbitmap.setImmutable();
+
+  track_resource_ = ScopedUIResource::Create(
+      layer_tree_host()->GetUIResourceManager(), UIResourceBitmap(skbitmap));
 }
 
 }  // namespace cc
